--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Calculator Practice </title>
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <div class="calculator">
+        <input type="text" id="display" readonly />
+
+        <div class="buttons">
+            <button type="button" class="btn btn-primary" id="clear">C</button>
+            <button type="button" class="btn btn-primary" id="delete">←</button>
+            <button type="button" class="btn btn-primary operator" id="divide">/</button>
+            <button type="button" class="btn btn-primary operator" id="multiply">*</button>
+
+
+
+
+
+
+
+            <button type="button" class="btn btn-primary" data-value="7" id="seven">7</button>
+            <button type="button" class="btn btn-primary" data-value="8" id="eight">8</button>
+            <button type="button" class="btn btn-primary" data-value="9" id="nine">9</button>
+            <button type="button" class="btn btn-primary operator" id="subtract">-</button>
+
+            <button type="button" class="btn btn-primary" data-value="4" id="four">4</button>
+            <button type="button" class="btn btn-primary" data-value="5" id="five">5</button>
+            <button type="button" class="btn btn-primary" data-value="6" id="six">6</button>
+            <button type="button" class="btn btn-primary operator" id="add">+</button>
+
+            <button type="button" class="btn btn-primary" data-value="1" id="one">1</button>
+            <button type="button" class="btn btn-primary" data-value="2" id="two">2</button>
+            <button type="button" class="btn btn-primary" data-value="3" id="three">3</button>
+            <button type="button" class="btn btn-primary" id="equals">=</button>
+
+            <button type="button" class="btn btn-primary" data-value="0" id="zero" class="wide">0</button>
+            <button type="button" class="btn btn-primary" id="decimal">.</button>
+        </div>
+    </div>
+
+
+    <script src="script.js"></script>
+
 </body>
+
 </html>
